# Algorithm

./: Cargo.toml  Makefile  algorithm_list.json  bench.json  bench.txt
benches/: benchmark.rs
src/: main.rs
src/algorithm/: add_one_row_tree.rs  basic_calculator.rs  binary_search.rs  bubble_sort.rs  burst_balloon.rs  candy_rating.rs  cat_and_mouse.rs  coin_change.rs  collatz_problem.rs  container_with_most_water.rs  count_special_integer.rs  decode_ways.rs  dice.rs  dijkstra.rs  edit_distance.rs  elevation_map.rs  euclidean_algorithm.rs  euler_totient.rs  fancy_sequence.rs  fibonacci.rs  freedom_trail.rs  gaussian_calc.rs  generic_algorithm.rs  get_permutation.rs  group_anagram.rs  hanoi.rs  huffman_cording.rs  islands_count.rs  jump_game.rs  largest_palindrome.rs  lcm_gcd.rs  least_frequency_used.rs  linked_list.rs  magic_circle.rs  match_substring_after_replace.rs  max_chunks_to_make_sorted.rs  median_array.rs  merge_sort.rs  mod.rs  monte_carlo.rs  (+25 more)
