[package]
name = "algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
qrcode = "0.12.0"
image = "0.23.14"
random-number = "0.1.7"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "lib"
path = "src/lib.rs"
